--- a/favorite.html
+++ b/favorite.html
@@ -71,11 +71,7 @@
   <!-- paginator -->
   <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center" id="paginator">
-      <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item"><a class="page-link" href="#">Next</a></li>
+      <!-- Render paginator -->
     </ul>
   </nav>
 
