--- a/movieAC.html
+++ b/movieAC.html
@@ -9,6 +9,7 @@
   <!-- bootstrap css -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="movieAC.css">
 </head>
 
 <body>
@@ -34,10 +35,15 @@
   <div class="container mt5">
     <!-- Search Bar -->
     <div class="row">
-      <form class="form-inline" id="search-form">
+      <form class="form-inline col-11" id="search-form">
+
         <input type="text" class="form-control mb-2 mr-sm-2" id="search-input" placeholder="Keyword...">
         <button type="submit" class="btn btn-primary mb-2">Search</button>
       </form>
+      <div>
+        <i class="fas fa-th mr-2 mt-4"></i>
+        <i class="fas fa-bars mt-4"></i>
+      </div>
     </div>
     <!-- Render Movie List -->
     <div class="row" id="data-panel">
@@ -94,6 +100,8 @@
     crossorigin="anonymous"></script>
   <!-- axios -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <!-- fontAwesome -->
+  <script src="https://kit.fontawesome.com/9753721a09.js" crossorigin="anonymous"></script>
   <!-- movie.js -->
   <script src="movieAC.js"></script>
 </body>
